# Heimdall

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.builds/: alpine.yml  archlinux.yml  ubuntu.yml
.github/workflows/: build.yml  update.yml
OSX/: README.txt
OSX/heimdall.kext/Contents/: Info.plist
OSX/heimdall.kext/Contents/_CodeSignature/: CodeResources
Win32/: README.txt
cmake/: Findlibusb.cmake  LargeFiles64.c
doc/: Heimdall-Firmware-Packages.md  Heimdall-Frontend-flash-instructions.md  Heimdall-flash-instructions.md
heimdall/: CMakeLists.txt
heimdall-frontend/: CMakeLists.txt  aboutform.ui  mainwindow.ui
heimdall-frontend/source/: Packaging.cpp  main.cpp  mainwindow.cpp  mainwindow.h
heimdall/source/: Arguments.cpp  BridgeManager.cpp  BridgeManager.h  ClosePcScreenAction.cpp  DetectAction.cpp  DownloadPitAction.cpp  FlashAction.cpp  Heimdall.h  HelpAction.cpp  InfoAction.cpp  Interface.cpp  Packet.h  PrintPitAction.cpp  TotalBytesPacket.h  VersionAction.cpp
libpit/: CMakeLists.txt
libpit/source/: libpit.cpp  libpit.h
scripts/ubuntu/: build.sh
